// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcRadioBtn #slots #error-message - should render error-message slot instead of error-message prop when both are passed 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <div
    class="ec-radio-btn__group"
    data-test="ec-radio-btn__group"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn ec-radio-btn-0"
    >
      <input
        aria-describedby="ec-radio-btn-error-1"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-0"
        id="ec-radio-btn-1"
        type="radio"
        value="y"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--error"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
            for="ec-radio-btn-1"
          >
            Yes
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn ec-radio-btn-1"
    >
      <input
        aria-describedby="ec-radio-btn-error-1"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-1"
        id="ec-radio-btn-1"
        type="radio"
        value="n"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--error"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
            for="ec-radio-btn-1"
          >
            No
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="ec-radio-btn__error-text"
    data-test="ec-radio-btn__error-text"
    id="ec-radio-btn-1"
  >
    
    Error message coming from slot
    
  </div>
  
</div>
`;

exports[`EcRadioBtn #slots #errorMessage - should render the error message slot if passed 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <div
    class="ec-radio-btn__group"
    data-test="ec-radio-btn__group"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn ec-radio-btn-0"
    >
      <input
        aria-describedby="ec-radio-btn-error-1"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-0"
        id="ec-radio-btn-1"
        type="radio"
        value="y"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--error"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
            for="ec-radio-btn-1"
          >
            Yes
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn ec-radio-btn-1"
    >
      <input
        aria-describedby="ec-radio-btn-error-1"
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-1"
        id="ec-radio-btn-1"
        type="radio"
        value="n"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper ec-radio-btn__radio-icon-wrapper--error"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
            for="ec-radio-btn-1"
          >
            No
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="ec-radio-btn__error-text"
    data-test="ec-radio-btn__error-text"
    id="ec-radio-btn-1"
  >
    
    Test error message slot
    
  </div>
  
</div>
`;

exports[`EcRadioBtn :props :disabled - should render the checked radio button with a disabled attribute 1`] = `
<input
  aria-describedby=""
  class="ec-radio-btn__input"
  data-test="ec-radio-btn__input ec-radio-btn__input-0"
  disabled=""
  id="ec-radio-btn-1"
  type="radio"
  value="y"
/>
`;

exports[`EcRadioBtn :props :disabled - should render the unchecked radio button with a disabled attribute 1`] = `
<input
  aria-describedby=""
  class="ec-radio-btn__input"
  data-test="ec-radio-btn__input ec-radio-btn__input-0"
  disabled=""
  id="ec-radio-btn-1"
  type="radio"
  value="y"
/>
`;

exports[`EcRadioBtn :props :error-message - should render the radio button with an error message 1`] = `
<div
  class="ec-radio-btn__error-text"
  data-test="ec-radio-btn__error-text"
  id="ec-radio-btn-1"
>
  
  Test error message prop
  
</div>
`;

exports[`EcRadioBtn :props :isGroupInline - should render the radio buttons on a single line 1`] = `
<div
  class="ec-radio-btn__group ec-radio-btn__group--is-single-line"
  data-test="ec-radio-btn__group"
>
  
  <div
    class="ec-radio-btn"
    data-test="ec-radio-btn ec-radio-btn-0"
  >
    <input
      aria-describedby=""
      class="ec-radio-btn__input"
      data-test="ec-radio-btn__input ec-radio-btn__input-0"
      id="ec-radio-btn-1"
      type="radio"
      value="y"
    />
    <div
      class="ec-radio-btn__wrapper"
    >
      <div
        class="ec-radio-btn__radio-icon-wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper-inner"
        >
          <svg
            class="ec-icon ec-radio-btn__radio-icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-rounded-notification"
            />
          </svg>
        </div>
      </div>
      <div
        class="ec-radio-btn__radio-text-wrapper"
        data-test="ec-radio-btn__radio-text-wrapper"
      >
        <label
          class="ec-radio-btn__radio-label"
          data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
          for="ec-radio-btn-1"
        >
          Yes
        </label>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div
    class="ec-radio-btn tw-ml-40"
    data-test="ec-radio-btn ec-radio-btn-1"
  >
    <input
      aria-describedby=""
      class="ec-radio-btn__input"
      data-test="ec-radio-btn__input ec-radio-btn__input-1"
      id="ec-radio-btn-1"
      type="radio"
      value="n"
    />
    <div
      class="ec-radio-btn__wrapper"
    >
      <div
        class="ec-radio-btn__radio-icon-wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper-inner"
        >
          <svg
            class="ec-icon ec-radio-btn__radio-icon"
            height="20"
            width="20"
          >
            <use
              xlink:href="#ec-rounded-notification"
            />
          </svg>
        </div>
      </div>
      <div
        class="ec-radio-btn__radio-text-wrapper"
        data-test="ec-radio-btn__radio-text-wrapper"
      >
        <label
          class="ec-radio-btn__radio-label"
          data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
          for="ec-radio-btn-1"
        >
          No
        </label>
        <!--v-if-->
      </div>
    </div>
  </div>
  
</div>
`;

exports[`EcRadioBtn :props :isTextInline - should render the radio buttons text (label and description) on a single line 1`] = `
<div
  class="ec-radio-btn__radio-text-wrapper ec-radio-btn__radio-text-wrapper--is-single-line"
  data-test="ec-radio-btn__radio-text-wrapper"
>
  <label
    class="ec-radio-btn__radio-label"
    data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
    for="ec-radio-btn-1"
    title="One option"
  >
    One option
  </label>
  <!--v-if-->
</div>
`;

exports[`EcRadioBtn :props :label - should render the radio button with a label 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="ec-radio-btn__label"
    data-test="ec-radio-btn__label"
  >
    Test label prop
  </div>
  <div
    class="ec-radio-btn__group"
    data-test="ec-radio-btn__group"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn ec-radio-btn-0"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-0"
        id="ec-radio-btn-1"
        type="radio"
        value="y"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
            for="ec-radio-btn-1"
          >
            Yes
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn ec-radio-btn-1"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-1"
        id="ec-radio-btn-1"
        type="radio"
        value="n"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
            for="ec-radio-btn-1"
          >
            No
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
  <!--v-if-->
  
</div>
`;

exports[`EcRadioBtn :props :label - should render the radio button without a label 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <div
    class="ec-radio-btn__group"
    data-test="ec-radio-btn__group"
  >
    
    <div
      class="ec-radio-btn"
      data-test="ec-radio-btn ec-radio-btn-0"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-0"
        id="ec-radio-btn-1"
        type="radio"
        value="y"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
            for="ec-radio-btn-1"
          >
            Yes
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="ec-radio-btn tw-mt-16"
      data-test="ec-radio-btn ec-radio-btn-1"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-1"
        id="ec-radio-btn-1"
        type="radio"
        value="n"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
            for="ec-radio-btn-1"
          >
            No
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
  <!--v-if-->
  
</div>
`;

exports[`EcRadioBtn accessibility should focus on the option selected with arrow key 1`] = `
<input
  aria-describedby=""
  class="ec-radio-btn__input"
  data-test="ec-radio-btn__input ec-radio-btn__input-1"
  id="ec-radio-btn-1"
  type="radio"
  value="n"
/>
`;

exports[`EcRadioBtn attrs should render with custom attributes 1`] = `
<div
  data-v-app=""
>
  
  <!--v-if-->
  <div
    class="ec-radio-btn__group"
    data-test="ec-radio-btn__group"
  >
    
    <div
      class="ec-radio-btn my-class"
      data-test="my-data-test ec-radio-btn ec-radio-btn-0"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-0"
        id="ec-radio-btn-1"
        type="radio"
        value="y"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-0"
            for="ec-radio-btn-1"
          >
            Yes
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="ec-radio-btn my-class tw-mt-16"
      data-test="my-data-test ec-radio-btn ec-radio-btn-1"
    >
      <input
        aria-describedby=""
        class="ec-radio-btn__input"
        data-test="ec-radio-btn__input ec-radio-btn__input-1"
        id="ec-radio-btn-1"
        type="radio"
        value="n"
      />
      <div
        class="ec-radio-btn__wrapper"
      >
        <div
          class="ec-radio-btn__radio-icon-wrapper"
        >
          <div
            class="ec-radio-btn__radio-icon-wrapper-inner"
          >
            <svg
              class="ec-icon ec-radio-btn__radio-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-rounded-notification"
              />
            </svg>
          </div>
        </div>
        <div
          class="ec-radio-btn__radio-text-wrapper"
          data-test="ec-radio-btn__radio-text-wrapper"
        >
          <label
            class="ec-radio-btn__radio-label"
            data-test="ec-radio-btn__radio-label ec-radio-btn__radio-label-1"
            for="ec-radio-btn-1"
          >
            No
          </label>
          <!--v-if-->
        </div>
      </div>
    </div>
    
  </div>
  <!--v-if-->
  
</div>
`;
